nova aleteração html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <img src="./7301316-avatar-cara-plana-icone-meninas-mulheres-meninas-eslava-aparencia-cabelo-longo-loiro-reto-usuario-para-sites-e-aplicativos-estoque-design-pele-branca-vetor.jpg" alt="">
